--- a/theme.html
+++ b/theme.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
+  <script src="//use.typekit.net/gsy0hqp.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
     <meta charset="utf-8">
     <title>
       {% if is_login %}Login
