--- a/theme.html
+++ b/theme.html
@@ -1,7 +1,24 @@
+Skip to content
+ This repository
+Explore
+Gist
+Blog
+Help
+@timsfowler timsfowler
+ 
+ Unwatch 1
+  Star 0
+  Fork 269
+timsfowler/theme-apex
+forked from postachio/theme-apex
+ branch: master  theme-apex/theme.html
+@timsfowlertimsfowler 20 days ago Update theme.html
+2 contributors @timsfowler @nerdburn
+RawBlameHistory     250 lines (218 sloc)  8.181 kb
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
-  <link rel='shortcut icon' type='image/x-icon' href='http://timfowler.postach.io/theme-apex/assets/images/favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='http://www.gravatar.com/avatar/192f7debcab9c7a74725b07a9e9990db.png'/>
   <script src="//use.typekit.net/gsy0hqp.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
     <meta charset="utf-8">
@@ -247,3 +264,5 @@
     
   </body>
 </html>
+Status API Training Shop Blog About
+© 2015 GitHub, Inc. Terms Privacy Security Contact
