--- a/theme.html
+++ b/theme.html
@@ -18,7 +18,7 @@ RawBlameHistory     250 lines (218 sloc)  8.181 kb
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
-  <link rel='shortcut icon' type='image/x-icon' href='http://www.gravatar.com/avatar/192f7debcab9c7a74725b07a9e9990db.png'/>
+  <link rel='shortcut icon' type='image/x-icon' href='http://timfowler.postach.io/theme-apex/assets/images/favicon.ico' />
   <script src="//use.typekit.net/gsy0hqp.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
     <meta charset="utf-8">
