--- a/theme.html
+++ b/theme.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
-  <link rel='shortcut icon' type='image/x-icon' href='http://timfowler.postach.io/theme-apex/assets/images/favicon.ico' />
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="http://timfowler.postach.io/theme-apex/assets/images/favicon.ico" type="image/x-icon"/>
   <script src="//use.typekit.net/gsy0hqp.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
     <meta charset="utf-8">
